--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,34 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+@font-face {
+  font-family: "IranYekan";
+  src: url("./assets/fonts/IRANYekanWebLight.woff2");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "IranYekan";
+  src: url("./assets/fonts/IRANYekanWebRegular.woff2");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "IranYekan";
+  src: url("./assets/fonts/IRANYekanWebBold.woff2");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "IranYekan";
+  src: url("./assets/fonts/IRANYekanWebExtraBold.woff2");
+  font-weight: 800;
+}
+
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-iranYekan: "IranYekan";
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -112,7 +137,7 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 font-iranYekan;
   }
   body {
     @apply bg-background text-foreground;
