--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --primary-dark:#831747;
+  --primary-lighter:#F8D4E4;
+  --primary-main:##DB2777;
 }
 
 :root {
@@ -142,4 +145,15 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .productCard__img{
+    @apply rounded-sm object-fill border border-b-gray-300;
+  }
+
+    .badge{
+    background-color: var(--primary-dark);
+    color: var(--primary-lighter);
+    border-radius: 9999px;
+  }
+
 }
