--- a/src/index.css
+++ b/src/index.css
@@ -1,34 +1,34 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @font-face {
-  font-family: "IranYekan";
-  src: url("./assets/fonts/IRANYekanWebLight.woff2");
+  font-family: 'IranYekan';
+  src: url('./assets/fonts/IRANYekanWebLight.woff2');
   font-weight: 300;
 }
 
 @font-face {
-  font-family: "IranYekan";
-  src: url("./assets/fonts/IRANYekanWebRegular.woff2");
+  font-family: 'IranYekan';
+  src: url('./assets/fonts/IRANYekanWebRegular.woff2');
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "IranYekan";
-  src: url("./assets/fonts/IRANYekanWebBold.woff2");
+  font-family: 'IranYekan';
+  src: url('./assets/fonts/IRANYekanWebBold.woff2');
   font-weight: 700;
 }
 
 @font-face {
-  font-family: "IranYekan";
-  src: url("./assets/fonts/IRANYekanWebExtraBold.woff2");
+  font-family: 'IranYekan';
+  src: url('./assets/fonts/IRANYekanWebExtraBold.woff2');
   font-weight: 800;
 }
 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --font-iranYekan: "IranYekan";
+  --font-iranYekan: 'IranYekan';
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -64,6 +64,9 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --primary-dark: #831747;
+  --primary-lighter: #f8d4e4;
+  --primary-main: #db2777;
 }
 
 :root {
@@ -142,4 +145,19 @@
   body {
     @apply bg-background text-foreground;
   }
+
+  .productCard__img {
+    @apply rounded-sm object-fill border border-b-gray-300;
+  }
+
+  .badge {
+    background-color: var(--primary-dark);
+    color: var(--primary-lighter);
+    border-radius: 9999px;
+  }
+}
+
+.checkbox {
+  @apply w-4.5 h-4.5 rounded-sm bg-[#22C55E] appearance-none relative
+before:content-['✔'] before:absolute before:text-white before:text-sm before:top-0.25 before:left-1;
 }
